--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-      <div id='a'>a</div>
-      <div id='b'>b</div>
-      <div id='c'>c</div>
-      <div id='d'>d</div>
-      <div id='e'>e</div>
-      <div id='f'>f</div>
-      <div id='g'>g</div>
-      <div id='h'>h</div>
-      <div id="i">i</div>
+      <div id='a'><span>a</span></div>
+      <div id='b'><span>b</span></div>
+      <div id='c'><span>c</span></div>
+      <div id='d'><span>d</span></div>
+      <div id='e'><span>e</span></div>
+      <div id='f'><span>f</span></div>
+      <div id='g'><span>g</span></div>
+      <div id='h'><span>h</span></div>
+      <div id="i"><span>i</span></div>
 </body>
 </html>
