changed floats in layout to grid and added third view point for tablet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+  <main>
       <div id='a'><span>a</span></div>
       <div id='b'><span>b</span></div>
       <div id='c'><span>c</span></div>
@@ -16,5 +17,6 @@
       <div id='g'><span>g</span></div>
       <div id='h'><span>h</span></div>
       <div id="i"><span>i</span></div>
+  </main>
 </body>
 </html>
